--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.security.user.name = minazuki
 spring.security.user.password=arata
 spring.datasource.url=jdbc:mysql://localhost:3306/login  
 spring.datasource.username = root
-spring.datasource.password = Sathwik@3587
+spring.datasource.password = (enter password)
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
